styles/main.css
@media all and (min-width: 1200px) {
    #content {
        margin: 0 auto;
        width: 1199px;
    }
}
@media all and (max-width: 1199px) {
    #content {
        margin: 0 auto;
        width: 90%;
    }
}

h3 {
    text-align: center;
}
.intro {
    font-style: italic;
    text-align: center;
}

header img {
    display: block;
    margin: 30px auto;
}
#content img {
    width: 80%;
}

